# gramarye-component-functions

./: CMakeLists.txt  README.md
include/core/: bar_value.h  health.h  position.h
include/textures/: atlas.h  sprite.h
src/core/: bar_value.c  health.c  position.c
src/textures/: atlas.c  sprite.c
